tests/miniJava/neg/001539_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new public [ 0 ] ; } }
